# Tree-Ring-Memory

./: .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml  text
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1-report.md  task-3-report.md  task-4-report.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
crates/tree-ring-memory-cli/: Cargo.toml
crates/tree-ring-memory-cli/examples/: quality_scenarios.rs  workflow_proof.rs
crates/tree-ring-memory-cli/src/: agent_awareness.rs  evidence.rs  harness_evidence.rs  integrations.rs  lib.rs  main.rs  recall_quality.rs  ring_mark.rs  welcome.rs  workflow_proof.rs
crates/tree-ring-memory-cli/src/actions/: adapters.rs  audit.rs  export_import.rs  integrations.rs  lifecycle.rs  mod.rs  recall.rs  remember.rs
crates/tree-ring-memory-cli/src/commands/: mod.rs  scriptable.rs
crates/tree-ring-memory-cli/src/tui/: actions.rs  app.rs  event.rs  input.rs  mod.rs  model.rs  render.rs  rings.rs  store_watch.rs  stream.rs  theme.rs
crates/tree-ring-memory-cli/tests/: multi_agent_acceptance.rs  workflow_proof.rs
crates/tree-ring-memory-core/: Cargo.toml
crates/tree-ring-memory-core/src/: audit.rs  consolidation.rs  dox.rs  import_export.rs  lib.rs  maintenance.rs  models.rs  quality.rs  recall.rs  revolve.rs  sensitivity.rs  workflow.rs
crates/tree-ring-memory-core/tests/: workflow_scenario.rs
crates/tree-ring-memory-sqlite/: Cargo.toml
crates/tree-ring-memory-sqlite/examples/: performance_smoke.rs
crates/tree-ring-memory-sqlite/src/: lib.rs  lifecycle.rs  policy.rs  schema.rs  search.rs  write.rs
docs/: feed.xml  index.html  llms.txt  press-kit.md  robots.txt  sitemap.xml
docs/architecture/: rust-core-roadmap.md  rust-core-status.md
docs/feature/: README.md
docs/integrations/: agent-skill.md  agent-workflow-proof.md
docs/launch/: rust-native-agent-memory-cli.md  tree-ring-memory-framework.md
docs/protocol/: memory-event.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-07-04-tree-ring-memory-framework-v0-1-implementation-plan.md  2026-07-05-tree-ring-memory-installer-onboarding-v0-10-implementation-plan.md  2026-07-05-tree-ring-memory-ratatui-tui-implementation-plan.md  2026-07-05-tree-ring-memory-rust-audit-v0-5-implementation-plan.md  2026-07-05-tree-ring-memory-rust-consolidation-v0-6-implementation-plan.md  2026-07-05-tree-ring-memory-rust-core-v0-2-implementation-plan.md  2026-07-05-tree-ring-memory-rust-import-export-v0-4-implementation-plan.md  2026-07-05-tree-ring-memory-rust-maintenance-v0-7-implementation-plan.md  2026-07-05-tree-ring-memory-rust-only-repo-v0-9-implementation-plan.md  2026-07-05-tree-ring-memory-rust-only-v0-8-implementation-plan.md  2026-07-05-tree-ring-memory-rust-python-bindings-v0-3-implementation-plan.md  2026-07-09-tree-ring-evidence-spine-phase-1-implementation-plan.md  2026-07-09-tree-ring-harness-certification-matrix-implementation-plan.md  2026-07-09-tree-ring-memory-quality-proof-loop-implementation-plan.md  2026-07-09-tree-ring-performance-harness-certification-implementation-plan.md  2026-07-09-tree-ring-recall-quality-dashboard-implementation-plan.md  2026-07-09-tree-ring-shared-action-foundation-implementation-plan.md  (+1 more)
fixtures/parity/: invalid-memory-event.json  legacy-private-scope-blank-identity.jsonl  legacy-private-scopes-export.jsonl  legacy-private-scopes-raw.jsonl  recall-ranking.json  redaction.json  schema-valid-sparse-memory.json  sensitivity-secret.json  valid-memory-event.json
fixtures/quality/: evidence-preservation.json  no-background-writer-constraint.json  scar-failure-recall.json  sensitive-memory-hidden.json  stale-cli-contract.json  superseded-heartwood.json  transient-planning-spam.json
fixtures/workflow-proof/: no-background-writer.json  scar-recovery.json  stale-cli-contract.json
marketing/: 0voice-awesome-ai-tools-pr.md  0xnyk-awesome-hermes-agent-issue.md  README.md  account-creation-runbook.md  account-setup.md  ad-directions.md  aetna-memorystackbench-pr.md  agent-memory-search-holds.md  agent-skills-md-listings.md  agentic-ai-submission.md  ai-agents-directory-submission.md  ai-for-developers-awesome-ai-coding-tools-pr.md  ai-for-enterprises-context-engineering-pr.md  aiagenta2z-ai-agent-marketplace-pr.md  aifindr-awesome-ai-tools-pr.md  ainative-ecosystem-pr.md  aisuperhub-submission.md  alainchen-awesome-mcp-skills-pr.md  aleksei-agent-memory-benchmark-pr.md  alexbevi-awesome-agent-frameworks-pr.md  alexwang-awesome-agent-memory-pr.md  aliammari-awesome-ai-tools-pr.md  alternbits-awesome-ai-agents-pr.md  alvinreal-awesome-opensource-ai-pr.md  ammosu-awesome-claude-skills-zh-tw-pr.md  anant-awesome-opencode-skills-pr.md  arshdeep-ai-tools-manager-pr.md  astek-awesome-context-engineering-pr.md  atom-awesome-agent-skills-pr.md  awakehsh-awesome-agent-tools-listing.md  bbylw-awesome-claude-skills-cn-pr.md  bigai-awesome-ai-memory-pr.md  c0ntr0lledcha0s-claude-code-plugin-automations-pr.md  carsteneu-ai-memory-comparison-pr.md  ccplugins-awesome-claude-code-plugins-pr.md  channel-playbook.md  chao-awesome-loop-engineering-pattern-issue.md  chat2anyllm-awesome-claude-skills-listing.md  chenhuiyu-awesome-llm-memory-pr.md  claude-code-and-coding-agents-holds.md  (+134 more)
marketing/scripts/: build-campaign-cards.py
marketing/youtube/: README.md  build-demo-video.sh  captions.srt  description.md  shorts.md  slides.html  tags.txt  title.txt  voiceover.txt
schemas/: memory-event.schema.json  recall-query.schema.json  recall-result.schema.json
scripts/: certify-tree-ring.sh  generate_brand_assets.py  native_binding_smoke.py  package-release.sh  rust_performance_smoke.py  stress-test-agent-memory.sh
skills/tree-ring-memory/: SKILL.md
src/tree_ring_memory/: __init__.py  api.py  cli.py  models.py  native_backend.py  recall.py  rust_backend.py  sensitivity.py  store.py
templates/dox/: AGENTS.md
tests/: test_audit.py  test_cli.py  test_consolidation.py  test_import_export.py  test_models.py  test_native_packaging.py  test_recall.py  test_sensitivity.py  test_store.py
(+19 files in other folders)
