[workspace]
members = [
  "crates/tree-ring-memory-core",
  "crates/tree-ring-memory-sqlite",
  "crates/tree-ring-memory-cli",
  "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["TerminallyLazy"]
repository = "https://github.com/TerminallyLazy/Tree-Ring-Memory"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
once_cell = "1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
pyo3 = { version = "0.22", features = ["abi3-py311"] }
pyo3-build-config = { version = "0.22" }
