[package]
name = "tree-ring-memory-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "_tree_ring_memory_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-ring-memory-core = { path = "../../crates/tree-ring-memory-core" }
tree-ring-memory-sqlite = { path = "../../crates/tree-ring-memory-sqlite" }

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]
