[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "tree-ring-memory-native"
version = "0.7.0"
description = "Native Rust bindings for Tree Ring Memory."
requires-python = ">=3.11"
license = { file = "../../LICENSE" }
authors = [
  { name = "TerminallyLazy" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust"
]

[tool.maturin]
module-name = "tree_ring_memory._tree_ring_memory_native"
python-source = "python"
features = ["extension-module"]
