[package]
name = "tree-ring-memory-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust CLI for local-first AI agent memory lifecycle: recall, audit, forgetting, evidence, and TUI."
homepage = "https://terminallylazy.github.io/Tree-Ring-Memory/"
readme = "../../README.md"
keywords = ["ai", "agents", "memory", "local-first", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tree-ring"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-ring-memory-core = { path = "../tree-ring-memory-core", version = "0.11.0" }
tree-ring-memory-sqlite = { path = "../tree-ring-memory-sqlite", version = "0.11.0" }

[dev-dependencies]
tempfile.workspace = true
