[package]
name = "tree-ring-memory-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core protocol models, recall scoring, validation, and sensitivity checks for Tree Ring Memory."
homepage = "https://terminallylazy.github.io/Tree-Ring-Memory/"
readme = "../../README.md"
keywords = ["ai", "agents", "memory", "local-first"]
categories = ["development-tools"]

[dependencies]
chrono.workspace = true
libc.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
