[package]
name = "tree-ring-memory-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite and FTS storage backend for local-first Tree Ring Memory agent recall."
homepage = "https://terminallylazy.github.io/Tree-Ring-Memory/"
readme = "../../README.md"
keywords = ["ai", "agents", "memory", "sqlite"]
categories = ["database-implementations", "development-tools"]

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tree-ring-memory-core = { path = "../tree-ring-memory-core", version = "0.13.0" }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
